--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -3,7 +3,7 @@
         <p>Brian Aylward <br>&copy; 2021</p>
     </div>
     <div class="footer-section">
-            <h3>Lorem.</h3>
+            <h3>Exile Finances</h3>
             <a href="#">About</a>
             <a href="#">About</a>
             <a href="#">About</a>
