--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="hero">
     <div class="hero-info">
-        <h1>Lorem.</h1>
-        <h3>Lorem, ipsum dolor.</h3>
+        <h1>Exile Finances</h1>
+        <h3>Set your mind at ease with our easy planning application</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, deleniti!</p>
     </div>
 </div>
@@ -12,22 +12,25 @@
     <div class="card">
         <img src="./images/pexels-pixabay-164527.jpg" alt="">
         <div class="card-info">
-            <h2>Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet expedita libero nostrum perferendis sit? Ipsam.</p>
+            <h2>Personal Finance Tracker</h2>
+            <p>Use our personalized finance tracker to track all your monthly bills. It makes financial planning simple and lets you focus on the important things in life.</p>
+            <a href="#"><button>Learn more</button></a>
         </div>
     </div>
     <div class="card">
         <img src="./images/pexels-pixabay-265087.jpg" alt="">
         <div class="card-info">
-            <h2>Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet expedita libero nostrum perferendis sit? Ipsam.</p>
+            <h2>Finance Statistics</h2>
+            <p>When you sign up for a free account and start using our finance tracker, you will be able to compare monthly expenses month-to-month. Think you spent more than you should have this month? Our graphs and statistics make it easy to compare.</p>
+            <a href="#"><button>Learn more</button></a>
         </div>
     </div>
     <div class="card">
         <img src="./images/pexels-startup-stock-photos-7357.jpg" alt="">
         <div class="card-info">
-            <h2>Lorem, ipsum.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet expedita libero nostrum perferendis sit? Ipsam.</p>
+            <h2>Income Tax Calculator</h2>
+            <p>Ever wonder how much you might owe in taxes at the end of the year or how much tax you SHOULD be paying on a monthly basis? Our income tax calculator makes all that easy for you.</p>
+            <a href="#"><button>Learn more</button></a>
         </div>
     </div>
 </div>
