--- a/public/styles/_index.scss
+++ b/public/styles/_index.scss
@@ -8,11 +8,15 @@
         width: 50%;
         padding: 4rem;
         margin-bottom: 4rem;
+        background-color: #fff;
+        border-radius: 15px;
         h1 {
-            font-size: clamp(2rem, 30vw, 3rem);
+            font-size: clamp(2rem, 30vw, 4rem);
+            font-weight: 300;
         }
         h3 {
-            font-size: clamp(1rem, 20vw, 2rem);
+            font-size: clamp(1rem, 20vw, 1.5rem);
+            font-weight: 400;
         }
         p {
             font-size: clamp(1rem, 10vw, 1.2rem);
@@ -32,7 +36,7 @@
     margin: 1rem auto;
     margin-bottom: 3rem;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 3rem;
     .card {
         border-radius: 15px;
@@ -42,6 +46,26 @@
         }
         .card-info {
             padding: 0 1rem 1rem 1rem;
+            h2 {
+                margin-bottom: .5rem;
+                text-align: center;
+            }
+            button {
+                padding: .5rem 1rem;
+                font-family: 'Montserrat', sans-serif;
+                border: none;
+                background-color: rgb(28, 80, 224);
+                color: #fff;
+                font-weight: 400;
+                margin: 1rem 0 0 auto;
+                cursor: pointer;
+                transition: all 200ms ease;
+                &:hover {
+                    background-color: rgb(57, 174, 241);
+                    font-weight: 600;
+                    color: #000;
+                }
+            }
         }
     }
 }
