--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -4,8 +4,10 @@
     align-items: center;
     padding: .5rem;
     background: #fff;
-    position: sticky;
+    position: fixed;
     top: 0;
+    width: 100%;
+    font-size: 1.3rem;
     #logo {
         padding: .5rem;
         max-height: 100px;
@@ -17,8 +19,10 @@
         a {
             text-decoration: none;
             color: #000;
+            transition: all 200ms ease-in-out;
             &:hover {
                 transform: scale(1.1);
+                color: rgb(28, 80, 224);
             }
         }
     }
@@ -30,6 +34,100 @@
         margin-right: 1rem;
         li {
             margin: 0 .2rem;
+        }
+    }
+    .hamburger {
+        display: none;
+        z-index: 99;
+        width: 2.5em;
+        height: 2em;
+        position: relative;
+        cursor: pointer;
+        margin-right: .4rem;
+        .hamburger_line {
+            height: 2px;
+            border-radius: 50px;
+            width: 100%;
+            background-color: #000;
+            margin: 8px 0;
+            transition: transform ease-in-out 300ms;
+        }
+        .line1 {
+            transform: rotate(45deg);
+            position: absolute;
+            top: 7px;
+        }
+        .line2 {
+            transform: rotate(-45deg);
+            position: absolute;
+            bottom: 6px;
+        }
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .navBar {
+        .navList,
+        .login-register {
+            list-style: none;
+            display: flex;
+            a {
+                text-decoration: none;
+                color: #000;
+                transition: all 200ms ease-in-out;
+                &:hover {
+                    transform: scale(1.1);
+                    color: rgb(28, 80, 224);
+                }
+            }
+        }
+        .navList {
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            width: 50%;
+            position: absolute;
+            top: 0;
+            right: 0;
+            min-height: 100vh;
+            background-color: #fff;
+            transform: translateX(100%);
+            transition: transform 300ms ease-in-out;
+        }
+        .toggle {
+            transform: translateX(0);
+        }
+        .login-register {
+            margin-right: 1rem;
+            li {
+                margin: 0 .2rem;
+            }
+        }
+        .hamburger {
+            display: block;
+            z-index: 99;
+            width: 2em;
+            height: 2em;
+            position: relative;
+            cursor: pointer;
+            .hamburger_line {
+                height: 2px;
+                border-radius: 50px;
+                width: 100%;
+                background-color: #000;
+                margin: 8px 0;
+                transition: transform ease-in-out 300ms;
+            }
+            .line1 {
+                transform: rotate(45deg);
+                position: absolute;
+                top: 12px;
+            }
+            .line2 {
+                transform: rotate(-45deg);
+                position: absolute;
+                bottom: 11px;
+            }
         }
     }
 }
