--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,9 +11,10 @@
           align-items: center;
   padding: .5rem;
   background: #fff;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
+  font-size: 1.3rem;
 }
 
 .navBar #logo {
@@ -33,12 +34,15 @@
 .navBar .login-register a {
   text-decoration: none;
   color: #000;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .navBar .navList a:hover,
 .navBar .login-register a:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+  color: #1c50e0;
 }
 
 .navBar .navList {
@@ -54,6 +58,130 @@
 
 .navBar .login-register li {
   margin: 0 .2rem;
+}
+
+.navBar .hamburger {
+  display: none;
+  z-index: 99;
+  width: 2.5em;
+  height: 2em;
+  position: relative;
+  cursor: pointer;
+  margin-right: .4rem;
+}
+
+.navBar .hamburger .hamburger_line {
+  height: 2px;
+  border-radius: 50px;
+  width: 100%;
+  background-color: #000;
+  margin: 8px 0;
+  -webkit-transition: -webkit-transform ease-in-out 300ms;
+  transition: -webkit-transform ease-in-out 300ms;
+  transition: transform ease-in-out 300ms;
+  transition: transform ease-in-out 300ms, -webkit-transform ease-in-out 300ms;
+}
+
+.navBar .hamburger .line1 {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  position: absolute;
+  top: 7px;
+}
+
+.navBar .hamburger .line2 {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  position: absolute;
+  bottom: 6px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .navBar .navList,
+  .navBar .login-register {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navBar .navList a,
+  .navBar .login-register a {
+    text-decoration: none;
+    color: #000;
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+  }
+  .navBar .navList a:hover,
+  .navBar .login-register a:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    color: #1c50e0;
+  }
+  .navBar .navList {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-height: 100vh;
+    background-color: #fff;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 300ms ease-in-out;
+    transition: -webkit-transform 300ms ease-in-out;
+    transition: transform 300ms ease-in-out;
+    transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
+  }
+  .navBar .toggle {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  .navBar .login-register {
+    margin-right: 1rem;
+  }
+  .navBar .login-register li {
+    margin: 0 .2rem;
+  }
+  .navBar .hamburger {
+    display: block;
+    z-index: 99;
+    width: 2em;
+    height: 2em;
+    position: relative;
+    cursor: pointer;
+  }
+  .navBar .hamburger .hamburger_line {
+    height: 2px;
+    border-radius: 50px;
+    width: 100%;
+    background-color: #000;
+    margin: 8px 0;
+    -webkit-transition: -webkit-transform ease-in-out 300ms;
+    transition: -webkit-transform ease-in-out 300ms;
+    transition: transform ease-in-out 300ms;
+    transition: transform ease-in-out 300ms, -webkit-transform ease-in-out 300ms;
+  }
+  .navBar .hamburger .line1 {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    position: absolute;
+    top: 12px;
+  }
+  .navBar .hamburger .line2 {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    position: absolute;
+    bottom: 11px;
+  }
 }
 
 .hero {
@@ -73,14 +201,18 @@
   width: 50%;
   padding: 4rem;
   margin-bottom: 4rem;
+  background-color: #fff;
+  border-radius: 15px;
 }
 
 .hero .hero-info h1 {
-  font-size: clamp(2rem, 30vw, 3rem);
+  font-size: clamp(2rem, 30vw, 4rem);
+  font-weight: 300;
 }
 
 .hero .hero-info h3 {
-  font-size: clamp(1rem, 20vw, 2rem);
+  font-size: clamp(1rem, 20vw, 1.5rem);
+  font-weight: 400;
 }
 
 .hero .hero-info p {
@@ -100,8 +232,8 @@
   margin-bottom: 3rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 3rem;
 }
 
@@ -116,6 +248,30 @@
 
 .info-cards .card .card-info {
   padding: 0 1rem 1rem 1rem;
+}
+
+.info-cards .card .card-info h2 {
+  margin-bottom: .5rem;
+  text-align: center;
+}
+
+.info-cards .card .card-info button {
+  padding: .5rem 1rem;
+  font-family: 'Montserrat', sans-serif;
+  border: none;
+  background-color: #1c50e0;
+  color: #fff;
+  font-weight: 400;
+  margin: 1rem 0 0 auto;
+  cursor: pointer;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+
+.info-cards .card .card-info button:hover {
+  background-color: #39aef1;
+  font-weight: 600;
+  color: #000;
 }
 
 footer {
@@ -144,6 +300,15 @@ footer .footer-section p {
   font-size: .8rem;
 }
 
+footer .footer-section a {
+  text-decoration: none;
+  color: #000;
+}
+
+footer .footer-section a:hover {
+  color: #1c50e0;
+}
+
 footer .footer-section a i {
   font-size: 2rem;
 }
@@ -158,8 +323,17 @@ footer .footer-section a i {
   line-height: 1.3;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   min-height: 100vh;
+}
+
+.container {
+  padding-top: 116px;
 }
 /*# sourceMappingURL=style.css.map */
