--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -11,7 +11,16 @@
     line-height: 1.3;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
+}
+
+.container {
+    padding-top: 116px;
 }
