--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -2,12 +2,15 @@
     <img src="./images/ExileLogo.png" alt="logo" id="logo">
     <ul class="navList">
         <a href="#"><li>Home</li></a>
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>Home</li></a>
+        <a href="#"><li>My Finances</li></a>
+        <a href="#"><li>Income Tax Calculator</li></a>
     </ul>
     <ul class="login-register">
         <a href="#"><li>Login</li></a>/
         <a href="#"><li>Register</li></a>
     </ul>
+    <div class="hamburger">
+            <div class="hamburger_line"></div>
+            <div class="hamburger_line"></div>
+    </div>
 </nav>
