--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -7,10 +7,13 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="https://kit.fontawesome.com/dbbea18efd.js" crossorigin="anonymous"></script>
+    <script src="js/app.js" defer type="module"></script>
 </head>
 <body>
     {{>nav}}
+    <div class="container">
     {{{body}}}
+    </div>
     {{>footer}}
 </body>
 </html>
