--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,14 +1,15 @@
 <nav class="navBar">
-    <img src="./images/ExileLogo.png" alt="logo" id="logo">
+    <a href="/"><img src="./images/ExileLogo.png" alt="logo" id="logo"></a>
     <ul class="navList">
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>My Finances</li></a>
-        <a href="#"><li>Income Tax Calculator</li></a>
+        <a href="/"><li>Home</li></a>
+        <a href="/finances"><li>My Finances</li></a>
+        <a href="/calculator"><li>Income Tax Calculator</li></a>
+        <ul class="login-register">
+            <a href="/login"><li>Login</li></a>/
+            <a href="/register"><li>Register</li></a>
+        </ul>
     </ul>
-    <ul class="login-register">
-        <a href="#"><li>Login</li></a>/
-        <a href="#"><li>Register</li></a>
-    </ul>
+    
     <div class="hamburger">
             <div class="hamburger_line"></div>
             <div class="hamburger_line"></div>
