--- a/public/styles/_footer.scss
+++ b/public/styles/_footer.scss
@@ -10,6 +10,20 @@ footer {
     gap: 5rem;
     .footer-section {
         text-align: center;
+        h3 {
+            position: relative;
+            margin-bottom: .5rem;
+        }
+        h3::after {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            content: "";
+            width: 50%;
+            height: 1px;
+            background-color: #000;
+        }
         p {
             font-size: .8rem;
         }
