--- a/public/styles/_index.scss
+++ b/public/styles/_index.scss
@@ -11,16 +11,33 @@
         background-color: #fff;
         border-radius: 15px;
         h1 {
-            font-size: clamp(2rem, 30vw, 4rem);
+            font-size: clamp(2.5rem, 4vw, 4rem);
             font-weight: 300;
         }
         h3 {
-            font-size: clamp(1rem, 20vw, 1.5rem);
+            font-size: clamp(1.2rem, 1.3vw, 2rem);
             font-weight: 400;
         }
         p {
-            font-size: clamp(1rem, 10vw, 1.2rem);
+            font-size: clamp(1rem, 1vw, 1.2rem);
             margin-top: 1rem;
+        }
+    }
+}
+
+@media only screen and (max-width:800px) {
+    .hero {
+        .hero-info {
+            padding: 2rem 1rem;
+            width: 75%;
+        }
+    }
+}
+
+@media only screen and (max-width:500px) {
+    .hero {
+        .hero-info {
+            width: 100%;
         }
     }
 }
