--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -55,12 +55,12 @@
         .line1 {
             transform: rotate(45deg);
             position: absolute;
-            top: 7px;
+            top: 12px;
         }
         .line2 {
             transform: rotate(-45deg);
             position: absolute;
-            bottom: 6px;
+            bottom: 11px;
         }
     }
 }
@@ -97,37 +97,16 @@
         .toggle {
             transform: translateX(0);
         }
-        .login-register {
-            margin-right: 1rem;
-            li {
-                margin: 0 .2rem;
-            }
-        }
         .hamburger {
             display: block;
-            z-index: 99;
-            width: 2em;
-            height: 2em;
-            position: relative;
-            cursor: pointer;
-            .hamburger_line {
-                height: 2px;
-                border-radius: 50px;
-                width: 100%;
-                background-color: #000;
-                margin: 8px 0;
-                transition: transform ease-in-out 300ms;
-            }
-            .line1 {
-                transform: rotate(45deg);
-                position: absolute;
-                top: 12px;
-            }
-            .line2 {
-                transform: rotate(-45deg);
-                position: absolute;
-                bottom: 11px;
-            }
+        }
+    }
+}
+
+@media only screen and (max-width:500px) {
+    .navBar {
+        .navList {
+            width: 80%;
         }
     }
 }
