--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -4,9 +4,9 @@
     </div>
     <div class="footer-section">
             <h3>Exile Finances</h3>
+            <a href="">Home</a>
             <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
+            <a href="#">Contact</a>
     </div>
     <div class="footer-section">
         <a href=""><i class="fab fa-linkedin"></i></a>
