--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -414,6 +414,82 @@ footer .footer-section a i {
   }
 }
 
+.finances-container {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.finances-container .personal-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 2px;
+  width: 20%;
+  text-align: center;
+  padding: 1rem;
+  background-color: #eee;
+  border-right: 1px solid #000;
+}
+
+.finances-container .personal-col .financeAmts {
+  font-weight: 300;
+}
+
+.finances-container .personal-col table {
+  margin: 0 auto 2rem auto;
+  text-align: left;
+}
+
+.finances-container .personal-col table th,
+.finances-container .personal-col table td {
+  padding: 0 1rem;
+}
+
+.finances-container .personal-col button {
+  padding: .3rem .6rem;
+  border: none;
+  background-color: #1c50e0;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  margin: .2rem;
+  cursor: pointer;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.finances-container .personal-col button:hover {
+  background-color: #39aef1;
+  font-weight: 600;
+  color: #000;
+}
+
+.finances-container .personal-col #detailedExp {
+  margin-top: 1rem;
+}
+
+.finances-container .main-finances {
+  width: 80%;
+}
+
+.finances-container .main-finances h1 {
+  text-align: center;
+}
+
 *,
 *::before,
 *::after {
