--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -3,6 +3,7 @@
 @import '_footer.scss';
 @import '_login-register.scss';
 @import '_finances.scss';
+@import '_calc.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap');
 *,
 *::before,
